--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "express": "~4.14.1",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
+    "pg": "^6.1.4",
+    "redis": "^2.7.1",
     "serve-favicon": "~2.3.2",
-    "express-route-dispatcher": "~0.0.12"
+    "stomp-client": "^0.9.0"
   }
 }
