--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
     "pg": "^6.1.4",
+    "properties-reader": "0.0.15",
     "redis": "^2.7.1",
     "serve-favicon": "~2.3.2",
     "stomp-client": "^0.9.0"
