set postgredb properties

--- a/properties/config.properties
+++ b/properties/config.properties
@@ -3,3 +3,10 @@ activeMq.host = 192.168.3.239
 activeMq.port = 61613
 activeMq.user = admin
 activeMq.password = admin
+
+#postgreDB Set
+postgre.user = postgres
+postgre.database = datagather
+postgre.password = postgres
+postgre.host = 192.168.3.239
+postgre.port = 5432
