--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.0",
     "express": "~4.14.1",
     "jade": "~1.11.0",
+    "log4js": "^1.1.1",
     "moment": "^2.18.0",
     "morgan": "~1.7.0",
     "pg": "^6.1.4",
