完成初始化统计

--- a/properties/config.properties
+++ b/properties/config.properties
@@ -5,8 +5,15 @@ activeMq.user = admin
 activeMq.password = admin
 
 #postgreDB Set
-postgre.user = postgres
-postgre.database = datagather
-postgre.password = postgres
-postgre.host = 192.168.3.239
+#postgre.user = postgres
+#postgre.database = datagather
+#postgre.password = postgres
+#postgre.host = 192.168.3.239
+#postgre.port = 5432
+postgre.user = haier
+postgre.database = athene
+postgre.password = Haier.5325~
+postgre.host = moesn.com
 postgre.port = 5432
+
+#Systemid Map
