完成第一版

--- a/properties/config.properties
+++ b/properties/config.properties
@@ -1,12 +1,22 @@
 #activeMq Set
-activeMq.host = 192.168.3.239
+#activeMq.host = 127.0.0.1
+#activeMq.host = 192.168.3.239
+#activeMq.host = 192.168.1.106
+activeMq.host = 101.37.169.160
 activeMq.port = 61613
 activeMq.user = admin
 activeMq.password = admin
 
 #postgreDB Set
-postgre.user = postgres
-postgre.database = datagather
-postgre.password = postgres
-postgre.host = 192.168.3.239
+#postgre.user = postgres
+#postgre.database = datagather
+#postgre.password = postgres
+#postgre.host = 192.168.3.239
+#postgre.port = 5432
+postgre.user = haier
+postgre.database = athene
+postgre.password = Haier.5325~
+postgre.host = moesn.com
 postgre.port = 5432
+
+#Systemid Map
