--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "log4js": "^1.1.1",
     "moment": "^2.18.0",
     "morgan": "~1.7.0",
+    "node-schedule": "^1.2.3",
     "pg": "^6.1.4",
     "properties-reader": "0.0.15",
     "redis": "^2.7.1",
